manifests/kyverno/nginx-with-kyverno.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-kyverno
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 101        # UID do usuário 'nginx' dentro da imagem oficial
    fsGroup: 101          # Garante que os volumes emptyDir tenham permissão para o UID 101
  containers:
  - name: nginx
    image: nginx:1.25.3   # Imagem oficial padrão (não é a unprivileged)
    ports:
    - containerPort: 8080
    securityContext:
      allowPrivilegeEscalation: false
      privileged: false
    volumeMounts:
    # Contornando o problema de permissão de escrita do PID
    - name: nginx-pid
      mountPath: /var/run
    # Contornando o problema de permissão de escrita de cache do proxy/Nginx
    - name: nginx-cache
      mountPath: /var/cache/nginx
  volumes:
  - name: nginx-pid
    emptyDir: {}
  - name: nginx-cache
    emptyDir: {}
